--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="icon" type="image/svg+xml" href="/million.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Million/React Compat</title>
+    <title>Vite + React + Million</title>
   </head>
   <body>
-    <div id="app"></div>
-
-    <script src="./script.jsx" type="module"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
